<resources>
    <string name="app_name">BigCleanKotlinXml</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="check_connection">Please check Wi‑Fi or Mobile data.</string>
    <string name="try_again">Try Again</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="go_register">New here? Register</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="register">Register</string>
    <string name="go_login">Already have account? Login</string>
    <string name="logged_in">Logged in</string>
    <string name="registered">Registered</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="notification_bar">🔔 Notifications</string>
    <string name="create_account">Create Account\n</string>
    <string name="gender">gender</string>
    <string name="forgot_password">Forgot password</string>
    <string name="see_all">See all</string>
    <string name="hello_user">Hello, User 👋</string>
    <string name="lang_bn_en">BN / EN</string>
    <string name="search">Search</string>
    <string name="action_new">New</string>
    <string name="action_history">History</string>
    <string name="action_profile">Profile</string>
    <string name="recommended_for_you">Recommended for you</string>
    <string name="open">Open</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="empty_title">Nothing here yet</string>
    <string name="empty_sub">Try refreshing or changing filters</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
