<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="24dp" android:orientation="vertical"
    android:layout_width="match_parent" android:layout_height="wrap_content">

    <ImageView
        android:layout_width="56dp" android:layout_height="56dp"
        android:layout_gravity="center_horizontal"
        android:src="@android:drawable/stat_notify_error"/>

    <TextView
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:text="@string/no_internet"
        android:textStyle="bold" android:textSize="18sp"
        android:gravity="center" android:layout_marginTop="12dp"/>

    <TextView
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:text="@string/check_connection"
        android:gravity="center" android:layout_marginTop="6dp"/>

    <Button
        android:id="@+id/btnRetry"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:text="@string/try_again" android:layout_marginTop="16dp"/>
</LinearLayout>
